--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "amqp-connection-manager": "^4.1.6",
+    "amqplib": "^0.10.3",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
