--- a/apps/main-app/.env
+++ b/apps/main-app/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb://root:password123@mongodb-primary:27017/
+MONGODB_URI=mongodb+srv://hgbocluster-iirfd.mongodb.net/vid-micro?retryWrites=true&w=majority
 
 PORT=3000
 
