--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "amqp-connection-manager": "^4.1.6",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.0.1",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "cookie-parser": "^1.4.6",
     "joi": "^17.6.0",
