--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "joi": "^17.6.0",
     "mongoose": "^6.6.0",
     "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0",
+    "passport": "^0.6.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
@@ -64,7 +64,8 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "passport-local": "^1.0.0"
   },
   "jest": {
     "moduleFileExtensions": [
