--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/mongoose": "^9.2.0",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
+    "@nestjs/typeorm": "^9.0.1",
     "amqp-connection-manager": "^4.1.6",
     "amqplib": "^0.10.3",
     "bcrypt": "^5.0.1",
@@ -37,11 +38,13 @@
     "cookie-parser": "^1.4.6",
     "joi": "^17.6.0",
     "mongoose": "^6.6.0",
-    "passport-jwt": "^4.0.0",
+    "mysql2": "^2.3.3",
     "passport": "^0.6.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "typeorm": "^0.3.9"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
@@ -57,6 +60,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "28.1.3",
+    "passport-local": "^1.0.0",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
@@ -64,8 +68,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.0",
-    "typescript": "^4.7.4",
-    "passport-local": "^1.0.0"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -88,7 +91,10 @@
       "<rootDir>/libs/"
     ],
     "moduleNameMapper": {
-      "^@app/commons(|/.*)$": "<rootDir>/libs/commons/src/$1"
+      "^@app/commons(|/.*)$": "<rootDir>/libs/commons/src/$1",
+      "^@app/configs(|/.*)$": "<rootDir>/libs/configs/src/$1",
+      "^@app/commons/configs(|/.*)$": "<rootDir>/libs/commons/configs/src/$1",
+      "^@app/commons/src/configs(|/.*)$": "<rootDir>/libs/commons/src/configs/src/$1"
     }
   }
 }
