Convert to new structure

--- a/apps/auth/.env
+++ b/apps/auth/.env
@@ -7,3 +7,4 @@ MONGODB_URI=mongodb+srv://hgbocluster-iirfd.mongodb.net/vid-micro?retryWrites=tr
 
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_AUTH_QUEUE=auth
+RABBIT_MQ_PROJECT_QUEUE=project
