--- a/apps/auth/.env
+++ b/apps/auth/.env
@@ -8,3 +8,9 @@ MONGODB_URI=mongodb+srv://hgbocluster-iirfd.mongodb.net/vid-micro?retryWrites=tr
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_AUTH_QUEUE=auth
 RABBIT_MQ_PROJECT_QUEUE=project
+
+MYSQL_DB_HOST=dev01.vidbeyond.staging
+MYSQL_DB_PROT=3306
+MYSQL_DB_USERNAME=root
+MYSQL_DB_PASSWORD=zyVwDQ4c6GPJwCxR
+MYSQL_DB_NAME=sso
