Convert to new structure

--- a/apps/project/.env
+++ b/apps/project/.env
@@ -1,3 +1,12 @@
+
+PORT=3002
+
 RABBIT_MQ_URI=amqp://rabbitmq:5672
 RABBIT_MQ_MAIN_QUEUE=project
 RABBIT_MQ_AUTH_QUEUE=auth
+
+MYSQL_DB_HOST=dev01.vidbeyond.staging
+MYSQL_DB_PROT=3306
+MYSQL_DB_USERNAME=root
+MYSQL_DB_PASSWORD=zyVwDQ4c6GPJwCxR
+MYSQL_DB_NAME=sso
